--- a/config.toml
+++ b/config.toml
@@ -16,11 +16,11 @@ home = ["HTML", "RSS", "Algolia"]
   header_image = "img/seagull.jpg"
   SEOTitle = "Arafath Hossain | Curious Joe"
   description = "A blog to log my data journey"
-  keyword = "赵化冰, zhaohuabing, Zhaohuabing, , 赵化冰的网络日志, 赵化冰的博客, Zhaohuabing Blog, 博客, 个人网站, 互联网, Web, 云原生, PaaS, Istio, Kubernetes, 微服务, Microservice"
+  keyword = "R, Python, Docker, Shiny, Statistics, Analysis, Data Cleaning, Programming"
   slogan = "Stay Curious"
 
   image_404 = "img/404-bg.jpg"
-  title_404 = "你来到了没有知识的荒原 :("
+  title_404 = "Sorry, I don't have what you are looking for :("
   omit_categories = false
 
   # leancloud storage for page view counter
