--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://zhaohuabing.com"
+baseurl = "https://curiousjoe.netlify.app"
 title = "Curious Joe"
 theme = "hugo-theme-cleanwhite"
 languageCode = "en-us"
@@ -51,10 +51,10 @@ home = ["HTML", "RSS", "Algolia"]
   disqus_site = ""
 
   #Enable wechat pay & alipay to allow readers send reward money if they like the articles 
-  reward = true 
+  #reward = true 
   # reward_guide = "如果这篇文章对你有用,请随意打赏" 
 
-  friends = true
+  #friends = true
   bookmarks = false
   about_me = true
 
