--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,9 @@ paginate = 5 #frontpage pagination
 hasCJKLanguage = true
 
 [outputs]
-home = ["HTML", "RSS", "Algolia"]
+# add Algolia in the list is added later
+home = ["HTML", "RSS"] 
+
 
 [params]
   header_image = "img/seagull.jpg"
@@ -18,6 +20,8 @@ home = ["HTML", "RSS", "Algolia"]
   description = "A blog to log my data journey"
   keyword = "R, Python, Docker, Shiny, Statistics, Analysis, Data Cleaning, Programming"
   slogan = "Stay Curious"
+  showtoc = true
+
 
   image_404 = "img/404-bg.jpg"
   title_404 = "Sorry, I don't have what you are looking for :("
@@ -29,10 +33,10 @@ home = ["HTML", "RSS", "Algolia"]
   leancloud_app_key = ""
 
   # algolia site search
-  algolia_search = true
-  algolia_appId = ""
-  algolia_indexName = ""
-  algolia_apiKey = ""
+  #algolia_search = true
+  #algolia_appId = ""
+  #algolia_indexName = ""
+  #algolia_apiKey = ""
 
   # Sidebar settings
   sidebar_about_description = "Data science and technology enthusiast"
@@ -72,6 +76,7 @@ home = ["HTML", "RSS", "Algolia"]
   #stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
   #instagram     = "full profile url in instagram"
   github         = "https://github.com/Curious-Joe"
+  youtube        = "https://www.youtube.com/channel/UCyhSHzYsOlY_Q3XpMeyPqjA?view_as=subscriber"
   #wechat         = "your wechat qr code image"
   #medium         = "full profile url in medium"
   #pinterest     = "full profile url in pinterest"
@@ -86,35 +91,35 @@ home = ["HTML", "RSS", "Algolia"]
   #title = "Linda的博客"
   #href =  "https://zhaozhihan.com"
 
-  [[params.bookmark_link]]
-  title =  "Martin Fowler"
-  href =  "https://martinfowler.com"
-  [[params.bookmark_link]]
-  title = "ServiceMesher"
-  href =  "http://www.servicemesher.com"
-  [[params.bookmark_link]]
-  title =  "Pxhere"
-  href = "https://pxhere.com"
-  [[params.bookmark_link]]
-  title = "unsplash"
-  href = "https://unsplash.com"
+  #[[params.bookmark_link]]
+  #title =  "Martin Fowler"
+  #href =  "https://martinfowler.com"
+  #[[params.bookmark_link]]
+  #title = "ServiceMesher"
+  #href =  "http://www.servicemesher.com"
+  #[[params.bookmark_link]]
+  #title =  "Pxhere"
+  #href = "https://pxhere.com"
+  #[[params.bookmark_link]]
+  #title = "unsplash"
+  #href = "https://unsplash.com"
   
-  [[params.addtional_menus]]
-  title =  "BOOKS"
-  href =  "/top/books/"
+#  [[params.addtional_menus]]
+#  title =  "BOOKS"
+#  href =  "/top/books/"
   [[params.addtional_menus]]
   title =  "ABOUT"
   href =  "/top/about/"
 
-[outputFormats.Algolia]
-baseName = "algolia"
-isPlainText = true
-mediaType = "application/json"
-notAlternative = true
+#[outputFormats.Algolia]
+#baseName = "algolia"
+#isPlainText = true
+#mediaType = "application/json"
+#notAlternative = true
 
-[params.algolia]
-vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink"]
-params = ["categories", "tags"] 
+#[params.algolia]
+#vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink"]
+#params = ["categories", "tags"] 
 
 [markup]
   [markup.tableOfContents]
