--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ home = ["HTML", "RSS"]
   #reward = true 
   # reward_guide = "如果这篇文章对你有用,请随意打赏" 
 
-  #friends = true
+  friends = true
   bookmarks = false
   about_me = true
 
@@ -88,8 +88,8 @@ home = ["HTML", "RSS"]
   #git           = "full profile url for git user"
   
   [[params.friend_link]]
-  #title = "Linda的博客"
-  #href =  "https://zhaozhihan.com"
+  title = "RBloggers"
+  href =  "https://www.r-bloggers.com"
 
   #[[params.bookmark_link]]
   #title =  "Martin Fowler"
