updated youtube link to curious-joe and removed github link

--- a/config.toml
+++ b/config.toml
@@ -75,8 +75,8 @@ home = ["HTML", "RSS"]
   linkedin       = "https://www.linkedin.com/in/arafath-hossain/"
   #stackoverflow  = "https://stackoverflow.com/users/yourstackoverflowid"
   #instagram     = "full profile url in instagram"
-  github         = "https://github.com/Curious-Joe"
-  youtube        = "https://www.youtube.com/channel/UCyhSHzYsOlY_Q3XpMeyPqjA?view_as=subscriber"
+  #github         = "https://github.com/Curious-Joe"
+  youtube        = "https://www.youtube.com/channel/UCF77K-Qu-QoBfu6ccbJM9dA?view_as=subscriber"
   #wechat         = "your wechat qr code image"
   #medium         = "full profile url in medium"
   #pinterest     = "full profile url in pinterest"
