--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ home = ["HTML", "RSS"]
   #algolia_apiKey = ""
 
   # Sidebar settings
-  sidebar_about_description = "Data science and technology enthusiast"
+  sidebar_about_description = "Data scientist, and technology enthusiast"
   #sidebar_avatar = "img/avatar-zhaohuabing.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
   sidebar_avatar = "img/PP_UP_MI.jpg"      # use absolute URL, seeing it's used in both `/` and `/about/`
 
@@ -107,9 +107,9 @@ home = ["HTML", "RSS"]
   #title = "unsplash"
   #href = "https://unsplash.com"
   
-#  [[params.addtional_menus]]
-#  title =  "BOOKS"
-#  href =  "/top/books/"
+  [[params.addtional_menus]]
+  title =  "Portfolio"
+  href =  "/top/portfolio/"
   [[params.addtional_menus]]
   title =  "ABOUT"
   href =  "/top/about/"
